<resources>
    <string name="app_name">Datensammler2020</string>
    <string name="options">Options</string>
    <string name="liveData">Live Data</string>
    <string name="graph">Graph</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gravity">Gravity</string>
    <string name="linearAcc">Linear Acceleration</string>
    <string name="proximity">Proximity</string>
    <string name="light">Light</string>
    <string name="magneticField">Magnetic Field</string>
    <string name="preference_is_accelerometer_activated">preference_is_accelerometer_activated</string>
    <string name="preference_is_gyroscope_activated">preference_is_gyroscope_activated</string>
    <string name="preference_is_gravity_activated">preference_is_gravity_activated</string>
    <string name="preference_is_linear_acceleration_activated">preference_is_linear_acceleration_activated</string>
    <string name="preference_is_proximity_activated">preference_is_proximity_activated</string>
    <string name="preference_is_light_activated">preference_is_light_activated</string>
    <string name="preference_is_magnetic_field_activated">preference_is_magnetic_field_activated</string>
    <string name="preference_is_save_to_db_activated">preference_is_save_to_db_activated</string>
    <string name="save_data_to_db">Database</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
</resources>
