<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/accelerometerSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/accelerometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/gyroscopeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/gyroscope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accelerometerSwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/gravitySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/gyroscopeSwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/linearAccSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linearAcc"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/gravitySwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/proximitySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximity"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/linearAccSwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/lightSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/proximitySwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/magnetFieldSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magneticField"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/lightSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>